--- a/pages/index.html
+++ b/pages/index.html
@@ -27,6 +27,8 @@
         class="mb-3 h-80 w-80 object-cover"
         alt="cat"
       />
+      <input type="text" class="form-control" />
+      <a href="#" class="btn btn-primary">123</a>
     </div>
     <%- include('./layout/footer'); -%>
     <script type="module" src="../main.js"></script>
